fix(user-dialog): ensure loader covers entire dialog

--- a/components/user-dialog/form-page.module.scss
+++ b/components/user-dialog/form-page.module.scss
@@ -7,6 +7,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  height: 100%;
 
   .nav {
     padding: 16px;
